# llm-sbi

./: .gitignore  README.md  pyproject.toml
exploration/: attention.ipynb  clustering.ipynb  cpp-llm-local.ipynb  embeddings.ipynb  embeddings_toy_prompt.ipynb  exploration-log.md  hf-llm-local.ipynb  injection-dataset.ipynb  perplexity.ipynb  reference-works.md
exploration/attention_introspection/: attention.py  server.py
exploration/attention_introspection/templates/: attention.html  index.html
