[tool.poetry]
name = "llm-sbi"
version = "0.1.0"
description = "LLM Sanitization-By-Intent"
authors = ["Aaron Johnston <aaron.johnston001@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.11.0"
sentence-transformers = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
