[tool.poetry]
name = "llm-sbi"
version = "0.1.0"
description = "LLM Sanitization-By-Intent"
authors = ["Aaron Johnston <aaron.johnston001@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
black = "^23.11.0"
sentence-transformers = "^2.2.2"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
accelerate = "^0.25.0"
bitsandbytes = "^0.41.3.post2"
llama-cpp-python = "^0.2.26"
optimum = "^1.16.1"
tiktoken = "^0.5.2"
ctransformers = "^0.2.27"
datasets = "^2.16.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
